--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,14 +17,13 @@
   color: black !important;
 }
 
-/* React big calendar */
 .rbc-btn-group:first-child {
   display: none !important;
 }
 
 .rbc-toolbar-label {
   text-align: right !important;
-  padding: 0 20px !important;
+  padding: 0px 20px !important;
 }
 
 .rbc-btn-group:last-child {
@@ -59,7 +58,7 @@
 }
 
 .rbc-time-gutter.rbc-time-column .rbc-timeslot-group {
-  padding: 0 20px !important;
+  padding: 0px 20px !important;
 }
 
 .rbc-timeslot-group {
@@ -81,35 +80,29 @@
 .rbc-event:nth-child(1) {
   background-color: #e2f8ff !important;
 }
-
 .rbc-event:nth-child(2) {
   background-color: #fefce8 !important;
 }
-
 .rbc-event:nth-child(3) {
   background-color: #f2f1ff !important;
 }
-
 .rbc-event:nth-child(4) {
   background-color: #fdf2fb !important;
 }
-
 .rbc-event:nth-child(5) {
   background-color: #e2f8ff !important;
 }
-
 .rbc-event:nth-child(6) {
   background-color: #fefce8 !important;
 }
-
 .rbc-event:nth-child(7) {
   background-color: #f2f1ff !important;
 }
-
 .rbc-event:nth-child(8) {
   background-color: #fdf2fb !important;
 }
 
-.rbc-event-label {
+.rbc-event-label{
   color: gray !important;
+  margin-bottom: 5px;
 }
